# Change-Point-Analysis-and-Statistical-Modeling

./: .gitignore  README.md  makefile  pyproject.toml
config/: paths.yaml
dashboard/: README.md
dashboard/backend/: app.py
dashboard/frontend/: app.js  index.html  package-lock.json  package.json
dashboard/frontend/services/: changepoints.js  dashboard.js  events.js  prices.js
dashboard/frontend/src/: main.tsx
dashboard/frontend/src/app/: App.tsx  routes.tsx  theme.ts
dashboard/frontend/src/components/charts/: BaseLineChart.tsx  ChangepointLabel.tsx  ChartLegend.tsx  ChartSyncContext.tsx  ChartTheme.ts  CustomTooltip.tsx  EventMarkers.tsx  FinancialChart.tsx  RegimeShading.tsx
dashboard/frontend/src/components/ui/: EmptyState.tsx  LoadingState.tsx  SectionHeader.tsx  StatCard.tsx
dashboard/frontend/src/context/: FilterContext.tsx  LayoutContext.tsx
dashboard/frontend/src/dashboard/: Dashboard.tsx  FilterBar.tsx  KPISection.tsx
dashboard/frontend/src/features/changepoints/: ChangePointTable.tsx  RegimeBadge.tsx  changepoint.service.ts
dashboard/frontend/src/features/events/: EventDetailModal.tsx  EventImpactTable.tsx  EventTable.tsx  event.service.ts
dashboard/frontend/src/features/prices/: PriceChart.tsx  VolatilityChart.tsx  price.service.ts
dashboard/frontend/src/hooks/: useEventImpact.ts  useEvents.tsx  useMarketSummary.ts  usePrices.tsx  useRegime.tsx  useVolatility.ts
dashboard/frontend/src/layout/: MainLayout.tsx  PageContainer.tsx  Sidebar.tsx  Topbar.tsx
dashboard/frontend/src/pages/: Dashboard.tsx  Events.tsx  Price.tsx
dashboard/frontend/src/services/: endpoints.ts
dashboard/frontend/src/utils/: calculations.ts  constants.ts  formatters.ts  yAisPadding.tsx
data/event/: events.csv
docs/: key_events.csv  workflow.md
notebooks/: eda.ipynb  point_change_analysis.ipynb  point_change_modeling.ipynb
src/point_analysis/core/: settings.py
src/point_analysis/data/: handler.py
